# SharpDicom

./: .gitignore  CHANGELOG.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  NOTICE  README.md  SharpDicom.sln
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  native-build.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v2.0.0-REQUIREMENTS.md  v2.0.0-ROADMAP.md
.planning/phases/01-core-data-model-dictionary/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-basic-file-reading/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-implicit-vr-sequences/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/04-character-encoding/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-pixel-data/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md
.planning/phases/06-private-tags/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md
.planning/phases/07-file-writing/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md
.planning/phases/08-validation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md
.planning/phases/09-rle-codec/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md
.planning/phases/10-network-foundation/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  (+12 more)
.planning/research/: 01-stack.md  02-features.md  03-architecture.md  04-pitfalls.md  SUMMARY.md
data/dicom-private-dicts/: VERSION
data/dicom-standard/: VERSION  part07.xml  part15.xml
docs/architecture/: README.md  data-model.md  design-principles.md  encoding.md  io.md  network.md
native/: build.zig
native/cuda/: CMakeLists.txt  nvjpeg2k_wrapper.c  nvjpeg2k_wrapper.h  test_nvjpeg2k_wrapper.c
native/src/: gpu_wrapper.c  gpu_wrapper.h  j2k_wrapper.c  j2k_wrapper.h  jls_wrapper.c  jls_wrapper.h  jpeg_wrapper.c  jpeg_wrapper.h  sharpdicom_codecs.c  sharpdicom_codecs.h  video_wrapper.c  video_wrapper.h
native/test/: test_version.c
nuget/: README.md  SharpDicom.Codecs.runtime.linux-arm64.nuspec  SharpDicom.Codecs.runtime.linux-x64.nuspec  SharpDicom.Codecs.runtime.osx-arm64.nuspec  SharpDicom.Codecs.runtime.osx-x64.nuspec  SharpDicom.Codecs.runtime.win-arm64.nuspec  SharpDicom.Codecs.runtime.win-x64.nuspec  THIRD_PARTY_LICENSES.txt
src/SharpDicom/: DicomFile.cs  SharpDicom.csproj  packages.lock.json
src/SharpDicom.Codecs/: NativeCodecException.cs  NativeCodecs.cs  SharpDicom.Codecs.csproj
src/SharpDicom.Generators/: DicomDictionaryGenerator.cs  SharpDicom.Generators.csproj  packages.lock.json
tests/SharpDicom.Codecs.Tests/: CodecRegistryPriorityTests.cs  NativeCodecsTests.cs  NativeJpeg2000CodecTests.cs  NativeJpegCodecTests.cs  SharpDicom.Codecs.Tests.csproj
tests/SharpDicom.Tests/: DicomFileTests.cs  ModuleInitializer.cs  SharpDicom.Tests.csproj  packages.lock.json
tests/SharpDicom.Tests.Polyfills/: SharpDicom.Tests.Polyfills.csproj
(+395 files in other folders)
